# csci384_project01

./: .gitignore  CMakeLists.txt  README.md
include/: PlaySnake.h  Snake.h  SnakeAI.h
src/: PlaySnake.cpp  SnakeAI.cpp
